--- a/2/day17/main.css
+++ b/2/day17/main.css
@@ -28,7 +28,7 @@ body {
 }
 
 .addButton{
-    background-image: url(images/plus_icon.png);
+    background: url('images/plus_icon.png');
     width: 25px;
     height: 25px;
     background-repeat: no-repeat;
@@ -46,6 +46,28 @@ body {
 
 p{
     margin-top: 10px;
-    margin-left: 10px;
+    margin-left: 30px;
     font-size: x-large;
 }
+label {
+    width: 40px;
+    height: 40px;
+    display: block;
+    position: relative;
+}
+input[type="checkbox"] + span {
+    position: absolute;
+    left: 0; top: 0;
+    width: 100%;
+    height: 100%;
+    background: url(images/checkbox_off.png) no-repeat;
+    cursor: pointer;
+}
+input[type="checkbox"]:checked + span {
+    background: url(images/checkbox_on.png) no-repeat; 
+}
+
+input[type="checkbox"]{
+    display: none;
+}
+
