отправляются смс, присылается код на email

--- a/4/day11/css/main.css
+++ b/4/day11/css/main.css
@@ -1,4 +1,3 @@
-
 body{
     background-color: #CCC;
     font-family: "Roboto-Light"
@@ -13,7 +12,7 @@ body{
     border: 1px solid black;
 }
 
-#settings_conteiner{
+#settings{
     border: 1px solid black;
     width: 98px;
     height: 32px;
@@ -25,11 +24,11 @@ a{
     text-decoration: none;
     color: black;
 }
-#settings_button{
+#buttonSETTINGS{
     margin-top: 5px;
 }
 
-#exit_conteiner{
+#logout{
     display: inline;
     float: right;
     border: 1px solid black;
@@ -41,18 +40,18 @@ a{
     cursor: pointer;
 }
 
-#exit_button{
+#buttonLOGIN{
     margin-top: 5px;  
 }
 
-#chat_conteiner{
+#chatContent{
     width: 302px;
     height: 437px;
     border: 1px solid black;
     margin-left: 8px;
 }
 
-#input_text_field{
+#textField{
     width: 267px;
     height: 28px;
     border: 1px solid black;
@@ -61,14 +60,14 @@ a{
     cursor: pointer;
 }
 
-#send_message{
+#buttonSEND{
     width: 27px;
     height: 32px;
     border: 1px solid black;
     background-color: white;
     cursor: pointer;
 }
-#chat_conteiner{
+#chatContent{
     position:relative;
     padding-bottom: 0;
 }
@@ -77,12 +76,12 @@ a{
     bottom: 5px;
 }
 
-.another_message, .my_message{
+.userMessage, .myMessage{
     background-color: #CCC;
     margin-top: 10px;
     margin-left: 5px;
     margin-right: 5px;
-    display: table;
+    display:inline-block;
 }
 
 .text{
@@ -91,11 +90,11 @@ a{
     margin-top: 0;
 }
 
-.my_message{
+.myMessage{
     float: inline-end;
 }
 
-.another_message{
+.userMessage{
     float: inline-start;
 }
 
@@ -108,67 +107,9 @@ a{
     font-size: small;
     padding-right: 5px;
     float: inline-end;
-}
+}    
 
-#popup_settings{
-    width: 321px;
-    height: 533px;
-    background-color: #444;
-    display: none;
-    position: absolute;
-    top: -19px;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    margin: auto;
+.space{
+    width: 267px;
+    float: inline-end;
 }
-
-#popup_settings_body{
-    width: 273px;
-    height: 319px;
-    margin: auto;
-    margin-top: 100px;
-    background-color: white;
-    text-align: center;
-}
-
-#popup_settings:target{
-    display:block;
-}
-
-#popup_settigs_text{
-    text-align: left;
-    padding-top: 10px;
-    padding-left: 20px;
-}
-
-.close_icon{
-    float: right;
-    margin-top: -33px;
-    margin-right: 20px;
-}
-
-#name_in_chat_text{
-    text-align: left;
-    padding-top: 10px;
-    padding-left: 20px;
-}
-
-#input_name_field{
-    width: 207px;
-    height: 28px;
-    border: 1px solid black;
-    margin-left: 8px;
-    margin-top: 4px;
-    cursor: pointer;
-}
-
-#send_name{
-    width: 27px;
-    height: 32px;
-    border: 1px solid black;
-    background-color: white;
-    cursor: pointer;
-}
-
-    
