--- a/4/day13/css/main.css
+++ b/4/day13/css/main.css
@@ -91,7 +91,7 @@ a{
 }
 
 .myMessage{
-    float: inline-end;
+    float: right;
 }
 
 .userMessage{
@@ -111,5 +111,5 @@ a{
 
 .space{
     width: 267px;
-    float: inline-end;
+    float: right;
 }
