--- a/4/day15/css/main.css
+++ b/4/day15/css/main.css
@@ -74,6 +74,8 @@ a{
 #chat{
     position:absolute;
     bottom: 5px;
+    display: flex;
+    flex-direction: column;
 }
 
 .userMessage, .myMessage{
@@ -81,7 +83,8 @@ a{
     margin-top: 10px;
     margin-left: 5px;
     margin-right: 5px;
-    display:inline-block;
+    max-width: 250px;
+
 }
 
 .text{
