--- a/4/day17/css/main.css
+++ b/4/day17/css/main.css
@@ -38,14 +38,20 @@ a{
     margin-right: 7px;
     text-align: center;
     cursor: pointer;
-    
 }
 
 #buttonLOGIN{
     margin-top: 5px;  
 }
 
-
+#chatContent{
+    overflow-y: scroll;
+    /* scroll-snap-align: ; */
+    width: 302px;
+    height: 437px;
+    border: 1px solid black;
+    margin-left: 8px;
+}
 
 #textField{
     width: 267px;
@@ -63,24 +69,16 @@ a{
     background-color: white;
     cursor: pointer;
 }
-
 #chatContent{
-    overflow-y: scroll;
-    width: 302px;
-    height: 437px;
-    border: 1px solid black;
-    margin-left: 8px;
     position:relative;
-    padding-bottom: 0; 
+    padding-bottom: 0;
 }
-
 #chat{
     position:absolute;
     bottom: 5px;
     display: flex;
     flex-direction: column;
     height: 500px;
-    /* justify-content; */
 }
 
 .userMessage, .myMessage{
