--- a/6/films/src/components/filter/index.css
+++ b/6/films/src/components/filter/index.css
@@ -1,7 +1,7 @@
 .filter-sidebar {
   margin-top: 80px;
   width: 350px;
-  height: 720px;
+  height: 820px;
   position: absolute;
 }
 
@@ -18,6 +18,7 @@
 }
 
 .option-sorting {
+  padding-top: 50px;
   padding-left: 20px;
 }
 
@@ -43,4 +44,10 @@
   position: absolute;
   bottom: 15px;
   margin-left: 25px;
+}
+
+.search-film {
+  width: 500px;
+  padding-left: 20px;
+  width: 300px;
 }
